add position for answer + question